syntax = "proto3";

import "invocation.proto";
import "trigger.proto";

package dispatcher_proto;

service Dispatcher {
  rpc Dispatch (DispatchRequest) returns (DispatchResponse);
}

enum DispatchMode {
  DispatchMode_UNKNOWN = 0;
  ASYNC = 1;
  SYNC = 2;
}

message DispatchRequest {
  string trigger_id = 1;
  string project_id = 2;
  repeated trigger_proto.Emit emits = 3;
  trigger_proto.Payload payload = 4;
  DispatchMode mode = 5;
}

message DispatchResponse {
  invocation_proto.Invocation invocation = 1;
}
